--- a/Mission_Clock/Base.lproj/Main.storyboard
+++ b/Mission_Clock/Base.lproj/Main.storyboard
@@ -20,14 +20,56 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="clockCell" rowHeight="118" id="URX-t4-ykv">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="clockCell" rowHeight="118" id="URX-t4-ykv" customClass="ClockCell" customModule="Mission_Clock" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="118"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="URX-t4-ykv" id="FNS-K2-Hez">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="118"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="알람" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EuH-Vp-N6w">
+                                                    <rect key="frame" x="20" y="20" width="69.5" height="78"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="오전" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pu9-ED-gtT">
+                                                    <rect key="frame" x="217.5" y="20" width="52" height="36"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NGx-xe-tfu" customClass="WeekView" customModule="Mission_Clock" customModuleProvider="target">
+                                                    <rect key="frame" x="89.5" y="76" width="324.5" height="32"/>
+                                                    <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="0.15073217935120034" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="00 : 00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CEt-BV-5I8">
+                                                    <rect key="frame" x="289.5" y="20" width="94.5" height="36"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="EuH-Vp-N6w" firstAttribute="leading" secondItem="FNS-K2-Hez" secondAttribute="leading" constant="20" id="1nH-Hh-l4u"/>
+                                                <constraint firstItem="CEt-BV-5I8" firstAttribute="leading" secondItem="Pu9-ED-gtT" secondAttribute="trailing" constant="20" id="N6C-oJ-1DF"/>
+                                                <constraint firstItem="EuH-Vp-N6w" firstAttribute="top" secondItem="FNS-K2-Hez" secondAttribute="top" constant="20" id="PTf-mk-Ulf"/>
+                                                <constraint firstAttribute="trailing" secondItem="NGx-xe-tfu" secondAttribute="trailing" id="R3S-OY-839"/>
+                                                <constraint firstItem="NGx-xe-tfu" firstAttribute="top" secondItem="CEt-BV-5I8" secondAttribute="bottom" constant="20" id="UPG-Lx-lJc"/>
+                                                <constraint firstAttribute="bottom" secondItem="EuH-Vp-N6w" secondAttribute="bottom" constant="20" id="W3i-gP-UbL"/>
+                                                <constraint firstAttribute="trailing" secondItem="CEt-BV-5I8" secondAttribute="trailing" constant="30" id="WfZ-r7-9lu"/>
+                                                <constraint firstAttribute="bottom" secondItem="NGx-xe-tfu" secondAttribute="bottom" constant="10" id="aIc-1K-bTU"/>
+                                                <constraint firstItem="CEt-BV-5I8" firstAttribute="top" secondItem="FNS-K2-Hez" secondAttribute="top" constant="20" id="lAF-Xr-cN2"/>
+                                                <constraint firstItem="NGx-xe-tfu" firstAttribute="leading" secondItem="EuH-Vp-N6w" secondAttribute="trailing" id="llD-HX-Hrh"/>
+                                                <constraint firstItem="NGx-xe-tfu" firstAttribute="top" secondItem="Pu9-ED-gtT" secondAttribute="bottom" constant="20" id="pcl-sd-hge"/>
+                                                <constraint firstItem="Pu9-ED-gtT" firstAttribute="top" secondItem="FNS-K2-Hez" secondAttribute="top" constant="20" id="wS7-nj-R7h"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="apmLabel" destination="Pu9-ED-gtT" id="RfD-ke-hXD"/>
+                                            <outlet property="clockLabel" destination="CEt-BV-5I8" id="5fI-4e-Trf"/>
+                                            <outlet property="titleLabel" destination="EuH-Vp-N6w" id="rox-eD-Ssr"/>
+                                            <outlet property="weekView" destination="NGx-xe-tfu" id="034-ok-S6o"/>
                                             <segue destination="Jjo-7i-68K" kind="show" id="Epg-v1-WJY"/>
                                         </connections>
                                     </tableViewCell>
@@ -59,24 +101,56 @@
             </objects>
             <point key="canvasLocation" x="926.08695652173924" y="93.75"/>
         </scene>
-        <!--View Controller-->
+        <!--Clock Detail View Controller-->
         <scene sceneID="LIY-Ck-xn9">
             <objects>
-                <viewController id="Jjo-7i-68K" sceneMemberID="viewController">
+                <viewController id="Jjo-7i-68K" customClass="ClockDetailViewController" customModule="Mission_Clock" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="h4b-GP-e0r">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PX1-Wq-1Am">
+                                <rect key="frame" x="84" y="123" width="251" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sr3-o1-Bvz">
+                                <rect key="frame" x="32" y="130" width="30" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dtj-vb-jzf" customClass="WeekView" customModule="Mission_Clock" customModuleProvider="target">
+                                <rect key="frame" x="32" y="193" width="344" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="0.24851696696502484" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="D9o-oq-YIR">
+                                <rect key="frame" x="84" y="282" width="236" height="59"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <locale key="locale" localeIdentifier="ko"/>
+                            </datePicker>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Pq1-lW-zCV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="amo-01-yfz">
-                        <barButtonItem key="leftBarButtonItem" title="취소" id="j3G-Ty-flo"/>
+                        <barButtonItem key="leftBarButtonItem" title="취소" id="j3G-Ty-flo">
+                            <connections>
+                                <action selector="dismissView:" destination="Jjo-7i-68K" id="VzE-ZR-gS9"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="저장" id="gsU-1I-P2s"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="weekView" destination="dtj-vb-jzf" id="etx-jO-V6L"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="znd-eC-vnK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2274" y="94"/>
+            <point key="canvasLocation" x="2273.913043478261" y="93.75"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gEw-Nk-2se">
