--- a/Mission_Clock/Base.lproj/Main.storyboard
+++ b/Mission_Clock/Base.lproj/Main.storyboard
@@ -41,7 +41,6 @@
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NGx-xe-tfu" customClass="WeekView" customModule="Mission_Clock" customModuleProvider="target">
                                                     <rect key="frame" x="89.5" y="76" width="324.5" height="32"/>
-                                                    <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="0.15073217935120034" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="00 : 00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CEt-BV-5I8">
                                                     <rect key="frame" x="289.5" y="20" width="94.5" height="36"/>
@@ -70,7 +69,7 @@
                                             <outlet property="clockLabel" destination="CEt-BV-5I8" id="5fI-4e-Trf"/>
                                             <outlet property="titleLabel" destination="EuH-Vp-N6w" id="rox-eD-Ssr"/>
                                             <outlet property="weekView" destination="NGx-xe-tfu" id="034-ok-S6o"/>
-                                            <segue destination="Jjo-7i-68K" kind="show" id="Epg-v1-WJY"/>
+                                            <segue destination="Jjo-7i-68K" kind="show" identifier="editshowDetail" id="Epg-v1-WJY"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -92,10 +91,13 @@
                     <navigationItem key="navigationItem" id="A91-Av-2Ev">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="5c8-JX-jjE">
                             <connections>
-                                <segue destination="Jjo-7i-68K" kind="show" id="xNR-uS-8EV"/>
+                                <segue destination="Jjo-7i-68K" kind="show" identifier="addshowDetail" id="xNR-uS-8EV"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="clockTableView" destination="fmD-7a-Q5z" id="vW2-cF-eUK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -123,14 +125,44 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dtj-vb-jzf" customClass="WeekView" customModule="Mission_Clock" customModuleProvider="target">
-                                <rect key="frame" x="32" y="193" width="344" height="46"/>
+                                <rect key="frame" x="82" y="327" width="292" height="46"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.99953407049999998" green="0.98835557699999999" blue="0.47265523669999998" alpha="0.24851696696502484" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="D9o-oq-YIR">
-                                <rect key="frame" x="84" y="282" width="236" height="59"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="반복" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4A4-vS-2lm">
+                                <rect key="frame" x="30" y="340" width="30" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Bu-MT-fno">
+                                <rect key="frame" x="32" y="266" width="30" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="미션" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6B-iY-XLa">
+                                <rect key="frame" x="32" y="545" width="30" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="사운드" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GZy-Cz-CoC">
+                                <rect key="frame" x="32" y="469" width="45" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" style="inline" translatesAutoresizingMaskIntoConstraints="NO" id="D9o-oq-YIR">
+                                <rect key="frame" x="84" y="247" width="236" height="59"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <locale key="locale" localeIdentifier="ko"/>
+                                <connections>
+                                    <action selector="dataPicker:" destination="Jjo-7i-68K" eventType="valueChanged" id="c3s-Lo-pdo"/>
+                                </connections>
                             </datePicker>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Pq1-lW-zCV"/>
@@ -145,6 +177,8 @@
                         <barButtonItem key="rightBarButtonItem" title="저장" id="gsU-1I-P2s"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="pickerView" destination="D9o-oq-YIR" id="RWd-sw-OP9"/>
+                        <outlet property="titlrField" destination="PX1-Wq-1Am" id="UEH-fA-GNc"/>
                         <outlet property="weekView" destination="dtj-vb-jzf" id="etx-jO-V6L"/>
                     </connections>
                 </viewController>
